--- a/templates/enseignant/dashboard.html
+++ b/templates/enseignant/dashboard.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <h1>Tableau de bord Enseignant</h1>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/enseignant/styleEnseignant.css') }}">
 <div class="dashboard-sections">
     <!-- Section Matières -->
