--- a/templates/etudiant/dashboard.html
+++ b/templates/etudiant/dashboard.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/etudiant/styleEtudiant.css') }}">
 
 <h1>Tableau de bord Étudiant</h1>
