--- a/templates/admin/base_admin.html
+++ b/templates/admin/base_admin.html
@@ -13,6 +13,9 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+    <!-- Theme Global -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}">
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -28,11 +31,7 @@
 
             <!-- Logo + Nom -->
             <div class="logo-title">
-                <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo">
-                <div>
-                    <h1>EvalyQuiz</h1>
-                    <small>Espace Administrateur</small>
-                </div>
+                <img src="{{ url_for('static', filename='images/LOGO.jpeg') }}" alt="Logo">
             </div>
 
             <!-- Navigation -->
