--- a/templates/admin/create_examen.html
+++ b/templates/admin/create_examen.html
@@ -3,11 +3,13 @@
 {% block title %}Créer un examen{% endblock %}
 
 {% block content %}
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/enseignant/styleCreateQuiz.css') }}">
 
 <div class="form-container">
     <h2>Créer un examen</h2>
-    
+        
     <form method="post" action="{{ url_for('admin.create_exam') }}">
         
         <!-- Titre -->
@@ -68,5 +70,4 @@
         <a href="{{ url_for('admin.gestion_examens') }}">← Retour à la gestion des examens</a>
     </p>
 </div>
-
 {% endblock %}
