--- a/templates/admin/gestion_exam.html
+++ b/templates/admin/gestion_exam.html
@@ -5,7 +5,7 @@
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/admin/styleAdmin.css') }}">
 
-<h1 class="admin-page-title">Gestion des Examens</h1>
+<h2 class="admin-title">Gestion des Examens</h2>
 
 <div class="admin-sections">
 
