supression de duree de quiz

--- a/templates/etudiant/dashboard.html
+++ b/templates/etudiant/dashboard.html
@@ -24,7 +24,7 @@
             <div class="quiz-card-footer">
                 <div class="quiz-card-duration">
                    
-                    <span>{{ q.duree }} min</span>
+                    <span>{{ q.duree_totale_minutes }} min</span>
                 </div>
                 <a href="{{ url_for('etudiant.take_quiz', quiz_id=q.id) }}">
                     <button class="quiz-card-button">Commencer</button>
